# tnm084-procedural-images

lab1/: .gitignore  CMakeLists.txt  SWshading.c  cellular.c  cellular.h  fragmentshader.glsl  noise1234.c  simplexnoise1234.c  simplexnoise1234.h  tnm084_lab1.c  tnm084_lab1.h  triangleSoup.c  triangleSoup.h  vertexshader.glsl
lab2/: .gitignore  bacon_displacement.sl  bacon_surface.sl  lab2.rib  vonoroi.sl
lab3/: .gitignore  GLSLprimer.c  Makefile  fragmentshader.glsl  vertexshader.glsl
